setion1 with styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header class="header">
-		<img class="logo" src="./Cryptiva_logo-removebg.png" alt="logo">
+		<img class="logo" src="./src/images/logo.png" alt="logo">
 		<div class="navbar">
 			<a href="">Home</a>
 			<a href="">About Us</a>
@@ -19,6 +19,16 @@
 		</div>
 		<button class="btn">CONTACT US</button>
 	</header>
+	<section class="section1">
+		<div class="changing_text">
+			<h1 class="maintext">Professional <span>Company</span> With Reliable Serivce</h1>
+			<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae itaque eius dolorum recusandae amet et consequuntur, incidunt dolore dolorem tenetur cumque temporibus optio, repellat quod error quisquam. Quaerat doloribus numquam nulla quae, tempora, blanditiis doloremque dolorum inventore necessitatibus, consectetur dolorem quos accusantium corporis neque. Nisi alias inventore quibusdam temporibus iure.</p>
+			<button class="btn">LEARN MORE</button>
+		</div>
+		<div>
+			<img src="./src/images/cybersecurity1.png" alt="Cybersecurity">
+		</div>
+	</section>
 </body>
 </html>
 
