cards without animation

--- a/index.html
+++ b/index.html
@@ -29,6 +29,31 @@
 			<img src="./src/images/cybersecurity1.png" alt="Cybersecurity">
 		</div>
 	</section>
+	<section class="section2">
+		<div class="cards">
+			<div class="card" id="security_services">
+				<div class="icon_heading">
+				<img class="icon" src="./src/images/security_services.png">
+				<h3>Security Services</h3>
+				</div>
+				<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, suscipit?Lorem ipsum dolor sit amet.</p>
+			</div>
+			<div class="card" id="data_privacy">
+				<div class="icon_heading">
+				<img class="icon" src="./src/images/data_privacy.png">
+				<h3>Data Privacy</h3>
+				</div>
+				<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, suscipit?Lorem ipsum dolor sit amet.</p>
+			</div>
+			<div class="card" id="industry certified">
+				<div class="icon_heading">
+				<img class="icon" src="./src/images/industry_certified.png">
+				<h3>Industry Certified</h3>
+				</div>
+				<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, suscipit?Lorem ipsum dolor sit amet.</p>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
 
