added trusted by companies section, welcome section not styled

--- a/index.html
+++ b/index.html
@@ -54,6 +54,38 @@
 			</div>
 		</div>
 	</section>
+
+	<section class="section3">
+		<h3 class="sub_heading">Trusted By Over <span>2300 + </span>Companies in the World</h3>
+		<div id="company_logos">
+			<img src="./src/images/organization.png" alt="customer_logo" class="logo">
+			<img src="./src/images/organization.png" alt="customer_logo" class="logo">
+			<img src="./src/images/organization.png" alt="customer_logo" class="logo">
+			<img src="./src/images/organization.png" alt="customer_logo" class="logo">
+		</div>
+	</section>
+
+	<section class="section4">
+		<img>
+		<div class="welcome_container">
+			<h3>Welcome To Cryptiva</h3>
+			<h2>The Perfect Solution For All The Protection Question</h2>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae voluptates tenetur illum nostrum inventore aut dignissimos maxime! Magnam temporibus similique quos, ad maiores omnis provident nisi, ipsa voluptates labore tempore?</p>
+			<div class="cards">
+				<div>
+					<img class="icon" src="./src/images/security_services.png">
+					<h3>High Quality Service</h3>
+					<p class="subtext">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius harum placeat illum voluptatum labore fugit!</p>
+				<div>
+				<div>
+					<img class="icon" src="./src/images/security_services.png">
+					<h3>Effective Protection</h3>
+					<p class="subtext">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius harum placeat illum voluptatum labore fugit!</p>
+				</div>
+			</div>
+			<button class="btn">GET FREE TRIAL</button>
+		</div>
+	</section>
 </body>
 </html>
 
