why choose us section added, facing issues with image size- image too big

--- a/index.html
+++ b/index.html
@@ -68,22 +68,44 @@
 	<section class="section4">
 		<img>
 		<div class="welcome_container">
-			<h3>Welcome To Cryptiva</h3>
-			<h2>The Perfect Solution For All The Protection Question</h2>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae voluptates tenetur illum nostrum inventore aut dignissimos maxime! Magnam temporibus similique quos, ad maiores omnis provident nisi, ipsa voluptates labore tempore?</p>
+			<h3 class="section_title">Welcome To Cryptiva</h3>
+			<h2 class="sub_heading">The Perfect Solution For All The Protection Question</h2>
+			<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+				Beatae voluptates tenetur illum nostrum inventore aut dignissimos maxime! 
+				Magnam temporibus similique quos, ad maiores omnis provident nisi, ipsa voluptates labore tempore?</p>
 			<div class="cards">
 				<div>
 					<img class="icon" src="./src/images/security_services.png">
 					<h3>High Quality Service</h3>
 					<p class="subtext">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius harum placeat illum voluptatum labore fugit!</p>
-				<div>
+				</div>
 				<div>
 					<img class="icon" src="./src/images/security_services.png">
 					<h3>Effective Protection</h3>
 					<p class="subtext">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius harum placeat illum voluptatum labore fugit!</p>
+					<br>
 				</div>
 			</div>
 			<button class="btn">GET FREE TRIAL</button>
+		</div>
+	</section>
+
+	<section class="section5">
+		<div class="why_choose_us">
+			<h3 class="section_title">Why Choose Us</h3>
+			<h2 class="sub_heading">Provide Advaced Security for Advanced Threat</h2>
+			<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+				Repellat sunt accusantium excepturi praesentium dolorem rem a adipisci non 
+				voluptates pariatur deleniti suscipit, omnis illum ut laudantium molestias! Alias, maiores velit.</p>
+			<ul style="color:whitesmoke; padding:20px;">
+				<li>Content Delivery Network</li>
+				<li>Malware Detection Removal</li>
+				<li>24/7 Support And Remote Admit</li>
+			</ul>
+			<button class="btn">READ MORE</button>
+		</div>
+		<div id="choose_us_image">
+			<img>
 		</div>
 	</section>
 </body>
