our serives  content added, not styled

--- a/index.html
+++ b/index.html
@@ -98,14 +98,90 @@
 				Repellat sunt accusantium excepturi praesentium dolorem rem a adipisci non 
 				voluptates pariatur deleniti suscipit, omnis illum ut laudantium molestias! Alias, maiores velit.</p>
 			<ul style="color:whitesmoke; padding:20px;">
-				<li>Content Delivery Network</li>
-				<li>Malware Detection Removal</li>
-				<li>24/7 Support And Remote Admit</li>
+				<li class="li_item subtext">✔️ Content Delivery Network</li>
+				<li class="li_item subtext">✔️ Malware Detection Removal</li>
+				<li class="li_item subtext">✔️ 24/7 Support And Remote Admit</li>
 			</ul>
 			<button class="btn">READ MORE</button>
 		</div>
 		<div id="choose_us_image">
 			<img>
+		</div>
+	</section>
+
+	<section class="section6">
+		<div class="horizontal_numbers">
+			<div class="number_card">
+				<img class="icon" src="./src/images/security_services.png">
+				<p class="sub_heading">3452</p>
+				<p class="subtext">Cybersecurity Projects</p>
+			</div>
+			<div class="number_card">
+				<img class="icon" src="./src/images/security_services.png">
+				<p class="sub_heading">1458</p>
+				<p class="subtext">Client Protection</p>
+			</div>
+			<div class="number_card">
+				<img class="icon" src="./src/images/security_services.png">
+				<p class="sub_heading">100%</p>
+				<p class="subtext">Service Guarentee</p>
+			</div>
+			<div class="number_card">
+				<img class="icon" src="./src/images/security_services.png">
+				<p class="sub_heading">85</p>
+				<p class="subtext">Team Experts</p>
+			</div>
+		</div>
+	</section>
+
+	<section class="section7">
+		<div class="our_services">
+			<h3 class="section_title">Our Services</h3>
+			<h2 class="sub_heading">What We Offer</h2>
+			<div class="services_cards">
+				<div class="card">
+					<img>
+					<h3>Network Security</h3>
+					<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aperiam.</p>
+					<a href=""><span>READ MORE</span></a>
+				</div>
+				<div class="card">
+					<img>
+					<h3>Network Security</h3>
+					<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aperiam.</p>
+					<a href=""><span>READ MORE</span></a>
+				</div>
+				<div class="card">
+					<img>
+					<h3>Database Security</h3>
+					<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aperiam.</p>
+					<a href=""><span>READ MORE</span></a>
+				</div>
+				<div class="card">
+					<img>
+					<h3>Web Security</h3>
+					<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aperiam.</p>
+					<a href=""><span>READ MORE</span></a>
+				</div>
+				<div class="card">
+					<img>
+					<h3>Locker Security</h3>
+					<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aperiam.</p>
+					<a href=""><span>READ MORE</span></a>
+				</div>
+				<div class="card">
+					<img>
+					<h3>data Security</h3>
+					<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aperiam.</p>
+					<a href=""><span>READ MORE</span></a>
+				</div>
+				<div class="card">
+					<img>
+					<h3>Cloud Security</h3>
+					<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aperiam.</p>
+					<a href=""><span>READ MORE</span></a>
+				</div>
+			</div>
 		</div>
 	</section>
 </body>
