SErvices and free trial added adn styled, free trial backgroud image not added

--- a/index.html
+++ b/index.html
@@ -143,45 +143,50 @@
 					<img>
 					<h3>Network Security</h3>
 					<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aperiam.</p>
-					<a href=""><span>READ MORE</span></a>
-				</div>
-				<div class="card">
-					<img>
-					<h3>Network Security</h3>
-					<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aperiam.</p>
-					<a href=""><span>READ MORE</span></a>
+					<a href=""><span>READ MORE →</span></a>
 				</div>
 				<div class="card">
 					<img>
 					<h3>Database Security</h3>
 					<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aperiam.</p>
-					<a href=""><span>READ MORE</span></a>
+					<a href=""><span>READ MORE →</span></a>
 				</div>
 				<div class="card">
 					<img>
 					<h3>Web Security</h3>
 					<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aperiam.</p>
-					<a href=""><span>READ MORE</span></a>
+					<a href=""><span>READ MORE →</span></a>
 				</div>
 				<div class="card">
 					<img>
 					<h3>Locker Security</h3>
 					<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aperiam.</p>
-					<a href=""><span>READ MORE</span></a>
+					<a href=""><span>READ MORE →</span></a>
 				</div>
 				<div class="card">
 					<img>
 					<h3>data Security</h3>
 					<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aperiam.</p>
-					<a href=""><span>READ MORE</span></a>
+					<a href=""><span>READ MORE →</span></a>
 				</div>
 				<div class="card">
 					<img>
 					<h3>Cloud Security</h3>
 					<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aperiam.</p>
-					<a href=""><span>READ MORE</span></a>
+					<a href=""><span>READ MORE →</span></a>
 				</div>
 			</div>
+		</div>
+	</section>
+
+	<section class="section8">
+		<div class="trial_days">
+			<h2 class="sub_heading">Still Confused About Our Features? Get a Free Trial for 7 Days</h2>
+			<div class="paragraph"><p class="subtext" style="color:whitesmoke;">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+				Incidunt laudantium corporis asperiores nemo dolor ab consequatur a
+				ut nisi minima unde, magni mollitia in! Rerum placeat ad veritatis 
+				ipsam non deleniti odit omnis rem perferendis sint, facere cumque, officiis, excepturi repellendus.</p></div>
+			<buton class="btn">GET FREE TRAIL</buton>
 		</div>
 	</section>
 </body>
