--- a/index.html
+++ b/index.html
@@ -189,6 +189,35 @@
 			<buton class="btn">GET FREE TRAIL</buton>
 		</div>
 	</section>
+	<section class="section9">
+		<div class="latest_news">
+			<h3 class="section_title">Our News</h3>
+			<h2 class="sub_heading">Latest News</h2>
+			<div class="services_cards">
+				<div class="card">
+					<img src="./src/images/close-up-programmer-typing-keyboard.jpg">
+					<p class="subtext">Cloud Security</p>
+					<h3>Five Strategies to Optimize Cloud Security in 2025</h3>
+					<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aperiam.</p>
+					<a href=""><span>READ MORE →</span></a>
+				</div>
+				<div class="card">
+					<img src="./src/images/close-up-programmer-typing-keyboard.jpg">
+					<p class="subtext">Criminals</p>
+					<h3>Cyber Criminals Publish stolen Sepa Data</h3>
+					<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aperiam.</p>
+					<a href=""><span>READ MORE →</span></a>
+				</div>
+				<div class="card">
+					<img src="./src/images/close-up-programmer-typing-keyboard.jpg">
+					<p class="subtext">Security</p>
+					<h3>The Security Risks of Changing Package Owners</h3>
+					<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aperiam.</p>
+					<a href=""><span>READ MORE →</span></a>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
 
