--- a/index.html
+++ b/index.html
@@ -219,13 +219,15 @@
 		</div>
 	</section>
 	<section class="section10">
-		<div class="trial_days">
-			<h2 class="sub_heading">Still Confused About Our Features? Get a Free Trial for 7 Days</h2>
+		<div class="Newsletter">
+			<h2 class="sub_heading">Subscribe Our Newsletter</h2>
 			<div class="paragraph"><p class="subtext" style="color:whitesmoke;">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
 				Incidunt laudantium corporis asperiores nemo dolor ab consequatur a
-				ut nisi minima unde, magni mollitia in! Rerum placeat ad veritatis 
-				ipsam non deleniti odit omnis rem perferendis sint, facere cumque, officiis, excepturi repellendus.</p></div>
-			<buton class="btn">GET FREE TRAIL</buton>
+				ut nisi minima unde, magni mollitia in! Rerum placeat ad veritatis </p></div>
+				<div id="subscribe">
+					<input type="text" placeholder="Enter your Email">
+					<button class="btn">SUBSCRIBE</button>
+				</div>
 		</div>
 	</section>
 </body>
