neewsletter and footer

--- a/index.html
+++ b/index.html
@@ -222,14 +222,32 @@
 		<div class="Newsletter">
 			<h2 class="sub_heading">Subscribe Our Newsletter</h2>
 			<div class="paragraph"><p class="subtext" style="color:whitesmoke;">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-				Incidunt laudantium corporis asperiores nemo dolor ab consequatur a
-				ut nisi minima unde, magni mollitia in! Rerum placeat ad veritatis </p></div>
+				Incidunt laudantium corporis asperiores nemo dolor ab consequatur. </p></div>
 				<div id="subscribe">
-					<input type="text" placeholder="Enter your Email">
+					<input type="text" placeholder="Your Email Address">
 					<button class="btn">SUBSCRIBE</button>
 				</div>
 		</div>
 	</section>
+	<footer>
+		<div class="footerbar">
+			<img src="./src/images/logo.png" class="logo">
+			<div class="footer_links">
+				<a href="">Home</a>
+				<a href="">About us</a>
+				<a href="">Services</a>
+				<a href="">News</a>
+				<a href="">Contact</a>
+			</div>
+			<div class="social_logo">
+				<a href=""><img src="./src/images/facebook.png"></a>
+				<img src="./src/images/instagram.png">
+				<img src="./src/images/twitter.png">
+				<img src="./src/images/youtube.png">
+			</div>
+		</div>
+			<p style="color:whitesmoke;">Copyright © 2025. All rights reserved</p>
+	</footer>
 </body>
 </html>
 
