--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 <body>
 	<header class="header">
 		<img class="logo" src="./src/images/logo.png" alt="logo">
-		<div class="navbar">
-			<a href="">Home</a>
-			<a href="">About Us</a>
-			<a href="">Services</a>
-			<a href="">Pages</a>
-			<a href="">Blog</a>
-			<a href="">Contact</a>
+		<div class="hamburger" onclick="toggleMenu()">☰</div>
+		<div class="navbar" id="navbar">
+			<a href="#">Home</a>
+			<a href="#">About Us</a>
+			<a href="#">Services</a>
+			<a href="#">Pages</a>
+			<a href="#">Blog</a>
+			<a href="#">Contact</a>
 		</div>
 		<button class="btn">CONTACT US</button>
 	</header>
@@ -248,6 +249,17 @@
 		</div>
 			<p style="color:whitesmoke;">Copyright © 2025. All rights reserved</p>
 	</footer>
+
+	<script>
+		function toggleMenu() {
+			var navbar = document.getElementById("navbar");
+			if (navbar.classList.contains('active')) {
+				navbar.classList.remove('active');
+			} else {
+				navbar.classList.add('active');
+			}
+		}
+		</script>
 </body>
 </html>
 
