--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Cryptiva</title>
 	<link rel="stylesheet" href="style.css">
+	
 </head>
 <body>
 	<header class="header">
@@ -250,16 +251,7 @@
 			<p style="color:whitesmoke;">Copyright © 2025. All rights reserved</p>
 	</footer>
 
-	<script>
-		function toggleMenu() {
-			var navbar = document.getElementById("navbar");
-			if (navbar.classList.contains('active')) {
-				navbar.classList.remove('active');
-			} else {
-				navbar.classList.add('active');
-			}
-		}
-		</script>
+	<script src="./script.js" rel="script"></script>
 </body>
 </html>
 
