pseudo class and animation for header and changing text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 	</header>
 	<section class="section1">
 		<div class="changing_text">
-			<h1 class="maintext">Professional <span>Company</span> With Reliable Serivce</h1>
+			<h2 class="maintext">Professional <span class="c_text"></span> </h2>
+			<h2 class="maintext">With Reliable Serivce</h2>
 			<p class="subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae itaque eius dolorum recusandae amet et consequuntur, incidunt dolore dolorem tenetur cumque temporibus optio, repellat quod error quisquam. Quaerat doloribus numquam nulla quae, tempora, blanditiis doloremque dolorum inventore necessitatibus, consectetur dolorem quos accusantium corporis neque. Nisi alias inventore quibusdam temporibus iure.</p>
 			<button class="btn">LEARN MORE</button>
 		</div>
