odoeter feature for the numbers

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Cryptiva</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.7/themes/odometer-theme-default.css" integrity="sha512-kMPqFnKueEwgQFzXLEEl671aHhQqrZLS5IP3HzqdfozaST/EgU+/wkM07JCmXFAt9GO810I//8DBonsJUzGQsQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	
 </head>
 <body>
@@ -116,22 +117,22 @@
 		<div class="horizontal_numbers">
 			<div class="number_card">
 				<img class="icon" src="./src/images/security_services.png">
-				<p class="sub_heading">3452</p>
+				<p class="sub_heading projects-odometer odometer">0</p>
 				<p class="subtext">Cybersecurity Projects</p>
 			</div>
 			<div class="number_card">
 				<img class="icon" src="./src/images/security_services.png">
-				<p class="sub_heading">1458</p>
+				<p class="sub_heading client-odometer odometer">0</p>
 				<p class="subtext">Client Protection</p>
 			</div>
 			<div class="number_card">
 				<img class="icon" src="./src/images/security_services.png">
-				<p class="sub_heading">100%</p>
+				<p class="sub_heading service-odometer odometer">0%</p>
 				<p class="subtext">Service Guarentee</p>
 			</div>
 			<div class="number_card">
 				<img class="icon" src="./src/images/security_services.png">
-				<p class="sub_heading">85</p>
+				<p class="sub_heading team-odometer odometer">0</p>
 				<p class="subtext">Team Experts</p>
 			</div>
 		</div>
@@ -252,6 +253,7 @@
 			<p style="color:whitesmoke;">Copyright © 2025. All rights reserved</p>
 	</footer>
 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.7/odometer.min.js" integrity="sha512-v3fZyWIk7kh9yGNQZf1SnSjIxjAKsYbg6UQ+B+QxAZqJQLrN3jMjrdNwcxV6tis6S0s1xyVDZrDz9UoRLfRpWw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="./script.js" rel="script"></script>
 </body>
 </html>
