odoeter feature for the numbers

--- a/index.html
+++ b/index.html
@@ -250,10 +250,10 @@
 				<img src="./src/images/youtube.png">
 			</div>
 		</div>
-			<p style="color:whitesmoke;">Copyright © 2025. All rights reserved</p>
+			<p style="color:whitesmoke;">Copyright © Apoorva SOmanahally Natesh 2025. All rights reserved</p>
 	</footer>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.7/odometer.min.js" integrity="sha512-v3fZyWIk7kh9yGNQZf1SnSjIxjAKsYbg6UQ+B+QxAZqJQLrN3jMjrdNwcxV6tis6S0s1xyVDZrDz9UoRLfRpWw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.7/odometer.js" integrity="sha512-RDzHFG2YwmzCqd0Dmtslp7xOZyDjXBDjrZHd+C3qFHTtNF4MRQyas9XvAT3ezXS+jgpOF70VuN0bTI4rjEWxlg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="./script.js" rel="script"></script>
 </body>
 </html>
