section9 responsiveness fixed

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 		<div class="latest_news">
 			<h3 class="section_title">Our News</h3>
 			<h2 class="sub_heading">Latest News</h2>
-			<div class="services_cards">
+			<div class="news_cards">
 				<div class="card">
 					
 					<p class="subtext">Cloud Security</p>
