--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 	<title>Cryptiva</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.7/themes/odometer-theme-default.css" integrity="sha512-kMPqFnKueEwgQFzXLEEl671aHhQqrZLS5IP3HzqdfozaST/EgU+/wkM07JCmXFAt9GO810I//8DBonsJUzGQsQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<!-- Github pages are cached with CDN.So the user has to clear the site cache 
+	 everytime to load new changes.To overcome this you can use meta tags in the HTML code, 
+	 they will load the webpage without caching. -->
+	<meta http-equiv='cache-control' content='no-cache'> 
+	<meta http-equiv='expires' content='0'> 
+	<meta http-equiv='pragma' content='no-cache'>
 	
 </head>
 <body>
