.security_services-section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<img src="./src/images/cybersecurity1.png" alt="Cybersecurity">
 		</div>
 	</section>
-	<section class="section2">
+	<section class="security_services-section">
 		<div class="cards">
 			<div class="card" id="security_services">
 				<div class="icon_heading">
