customer_trust-section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		</div>
 	</section>
 
-	<section class="section3">
+	<section class="customer_trust-section">
 		<h3 class="sub_heading">Trusted By Over <span>2300 + </span>Companies in the World</h3>
 		<div id="company_logos">
 			<img src="./src/images/organization.png" alt="customer_logo" class="logo">
