choose_us-section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		</div>
 	</section>
 
-	<section class="section5">
+	<section class="choose_us-section">
 		<div class="why_choose_us">
 			<h3 class="section_title">Why Choose Us</h3>
 			<h2 class="sub_heading">Provide Advaced Security for Advanced Threat</h2>
