choose_us-section

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 		</div>
 	</section>
 
-	<section class="section6">
+	<section class="numbers-section">
 		<div class="horizontal_numbers">
 			<div class="number_card">
 				<img class="icon" src="./src/images/security_services.png">
